<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Desafio Mobile Conductor</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Fechar navigation drawer</string>

    <string name="nav_header_desc">Header do Navigation</string>
    <string name="nav_header_title">Bruno Melo</string>
    <string name="nav_header_subtitle">brunonobrega.melo@gmail.com</string>

    <string name="cartao_type">Tipo de Cartão</string>
    <string name="bluecard">BlueCard</string>
    <string name="greencard">GreenCard</string>
    <string name="visao_geral">Visão Geral</string>
    <string name="extrato">Extrato</string>
    <string name="title_activity_extrato">Extrato</string>
    <string name="overview">Visão Geral</string>
    <string name="saldo">Saldo</string>
    <string name="zero_balance">R$0,00</string>
    <string name="saldo_update_error">Não foi possivel atualizar o Saldo</string>
    <string name="extrato_update_error">Não foi possivel atualizar o Extrato</string>
    <string name="networ_error">Não foi possive obter as informações do servidor.</string>
    <string name="logo">logo</string>
    <string name="card_overlay" tools:ignore="Typos">xxxx xxxx xxxx 0000</string>
    <string name="date_ovelay">06/18</string>
    <string name="nome_overlay">Nome overlay</string>
    <string name="back">Volta</string>
    <string name="forward">Avança</string>
    <string name="pagination_number_oberlay">1/…</string>
    <string name="paginator_marcador">{0}/{1}</string>
    <string name="descricao">descricao</string>
    <string name="loja">loja</string>
    <string name="filtro">Filtro</string>
    <string name="carteira">Carteira</string>
    <string name="grafico">Gráfico</string>
    <string name="filtro_dialog_text">Selecione a data e o ano</string>
    <string name="filtro_dialog_title">Filtro Data</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ano">Ano:</string>
    <string name="mes">mês:</string>
    <string name="aguarde">Aguarde...</string>
    <string name="atualizando">Atualizando</string>

    <string-array name="months">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
</resources>
