<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_visao_geral"
            android:icon="@drawable/ic_overview_24dp"
            android:title="@string/visao_geral" />
        <item
            android:id="@+id/nav_extrato"
            android:icon="@drawable/ic_extrato_24dp"
            android:title="@string/extrato" />
    </group>

    <item android:title="@string/cartao_type">
        <menu>
            <item
                android:id="@+id/nav_bluecard"
                android:icon="@drawable/ic_blue_card_24dp"
                android:title="@string/bluecard" />
            <item
                android:id="@+id/nav_greencard"
                android:icon="@drawable/ic_green_card_24dp"
                android:title="@string/greencard" />
        </menu>
    </item>

</menu>
