<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_carteira"
        android:icon="@drawable/ic_account_balance_wallet_24dp"
        android:orderInCategory="100"
        android:title="@string/carteira"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_grafico"
        android:icon="@drawable/ic_trending_up_24dp"
        android:orderInCategory="100"
        android:title="@string/grafico"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_filtro"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="100"
        android:title="@string/filtro"
        app:showAsAction="always" />

</menu>