<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbarDate"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="@drawable/card_foreground"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <TextView
            android:id="@+id/text_pagination_data"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:background="@drawable/card_foreground"
            android:gravity="center"
            android:text="@string/pagination_number_oberlay"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_forward"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="@drawable/card_foreground"
            android:clickable="true"
            android:contentDescription="@string/forward"
            android:focusable="true"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>
