<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="16dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/credit_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_card_background"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/mastercard_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/text_card_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:paddingBottom="4dp"
                android:paddingTop="8dp"
                android:text="@string/card_overlay"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_card_validade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif"
                android:paddingBottom="4dp"
                android:paddingTop="8dp"
                android:text="@string/date_ovelay"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:paddingBottom="4dp"
            android:text="@string/nome_overlay"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.v7.widget.CardView>